--- a/pom.xml
+++ b/pom.xml
@@ -9,9 +9,9 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.jackmu</groupId>
-	<artifactId>sc-email</artifactId>
+	<artifactId>trtlmail-email</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>sc-email</name>
+	<name>trtlmail-email</name>
 	<description>Microservice for sending emails</description>
 	<properties>
 		<java.version>17</java.version>
@@ -50,11 +50,6 @@
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
 		</dependency>
-        <dependency>
-            <groupId>com.amazonaws</groupId>
-            <artifactId>aws-java-sdk-ses</artifactId>
-            <version>1.12.609</version>
-        </dependency>
 
 		<dependency>
 			<groupId>io.awspring.cloud</groupId>
@@ -69,6 +64,17 @@
 			<groupId>io.awspring.cloud</groupId>
 			<artifactId>spring-cloud-starter-aws-ses</artifactId>
 			<version>2.4.4</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-web</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+			<scope>runtime</scope>
 		</dependency>
 
 	</dependencies>
