added configs to pom file for clean package

--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
 	<description>Microservice for sending emails</description>
 	<properties>
 		<java.version>17</java.version>
+		<tests.skip>true</tests.skip>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -93,6 +94,14 @@
 							<artifactId>lombok</artifactId>
 						</exclude>
 					</excludes>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.22.2</version>
+				<configuration>
+					<skipTests>${tests.skip}</skipTests>
 				</configuration>
 			</plugin>
 		</plugins>
