7 added an unsubscribe footer

--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.jackmu</groupId>
-	<artifactId>trtlmail-email</artifactId>
+	<artifactId>trtlpost-email</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>trtlmail-email</name>
 	<description>Microservice for sending emails</description>
